Add new Jupyter notebook, CSV data file, and Python script for data processing; update numpy notebook with additional content

--- a/Pypi/maths/numpy.ipynb
+++ b/Pypi/maths/numpy.ipynb
@@ -18,7 +18,9 @@
     "\n",
     "6. [Array manipulation](#Array-manipulation)\n",
     "\n",
-    "7. [Mathematical Functions](#mathematical-functions)"
+    "7. [Mathematical Functions](#mathematical-functions)\n",
+    "\n",
+    "8. [Matrix and vector operation](#matrix-and-vector-operation)"
    ]
   },
   {
@@ -41,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%% capture\n",
+    "%%capture\n",
     "%pip install numpy"
    ]
   },
@@ -1342,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1351,9 +1353,9 @@
      "text": [
       "[0.   0.34 0.52 1.57] \n",
       "\n",
-      "[1.57 1.23 1.05 0.  ] \n",
+      "[1. 1. 1. 0.] \n",
       "\n",
-      "[0.   0.32 0.46 0.79] \n",
+      "[0. 1. 1. 1.] \n",
       "\n"
      ]
     }
@@ -1365,8 +1367,149 @@
     "arccos = np.arccos(x) # arccosine of elements\n",
     "arctan = np.arctan(x) # arctangent of elements\n",
     "print(np.around(arcsin, decimals=2),'\\n') # arcsine values\n",
-    "print(np.around(arccos, decimals=2),'\\n') # arccosine values\n",
-    "print(np.around(arctan, decimals=2),'\\n') # arctangent values"
+    "print(np.floor(arccos),'\\n') # arccosine values\n",
+    "print(np.ceil(arctan),'\\n') # arctangent values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**elementary operator**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[15 17 19 21]\n",
+      " [19 21 23 25]] \n",
+      "\n",
+      "[[-9 -9 -9 -9]\n",
+      " [-5 -5 -5 -5]] \n",
+      "\n",
+      "[[ 36  52  70  90]\n",
+      " [ 84 104 126 150]] \n",
+      "\n",
+      "[[0.25       0.30769231 0.35714286 0.4       ]\n",
+      " [0.58333333 0.61538462 0.64285714 0.66666667]] \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.array([[3, 4, 5, 6],[7, 8, 9, 10]])\n",
+    "b = np.array([12, 13, 14, 15])\n",
+    "c = np.add(a, b) # element-wise addition\n",
+    "d = np.subtract(a, b) # element-wise subtraction\n",
+    "e = np.multiply(a, b) # element-wise multiplication\n",
+    "f = np.divide(a, b) # element-wise division\n",
+    "print(c,'\\n') # addition result\n",
+    "print(d,'\\n') # subtraction result\n",
+    "print(e,'\\n') # multiplication result\n",
+    "print(f,'\\n') # division result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Matrix and vector operation\n",
+    "\n",
+    "**matrix multi and vector dot product**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[37 40]\n",
+      " [85 92]] \n",
+      "\n",
+      "[[37 40]\n",
+      " [85 92]] \n",
+      "\n",
+      "[[[ 2  3]\n",
+      "  [ 6 11]]\n",
+      "\n",
+      " [[46 55]\n",
+      "  [66 79]]] \n",
+      "\n",
+      "130 \n",
+      "\n",
+      "[[35 41]\n",
+      " [81 95]] \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a=np.array([[1,2],[3,4]])\n",
+    "b=np.array([[11,12],[13,14]])\n",
+    "c=d=np.arange(8).reshape(2,2,2)\n",
+    "\n",
+    "print(np.dot(a,b),'\\n') # matrix and vector mixed product\n",
+    "print(np.matmul(a,b),'\\n') # matrix multi\n",
+    "print(np.matmul(c,d),'\\n') # matrix multi with 3d arrays\n",
+    "print(np.vdot(a,b),'\\n') # flatten to vector dot product\n",
+    "print(np.inner(a,b),'\\n') # component-wise inner product"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**linear algebra**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2.0 \n",
+      "\n",
+      "[[0. ]\n",
+      " [0.5]] \n",
+      "\n",
+      "[[0. ]\n",
+      " [0.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a=np.array([[1,2],[3,4]])\n",
+    "b=np.array([[1],[2]])\n",
+    "det=np.linalg.det(a)\n",
+    "sol=np.linalg.solve(a,b)\n",
+    "print(np.around(det,2),'\\n',)\n",
+    "print(sol,'\\n')\n",
+    "print(np.dot(np.linalg.inv(a),b))"
    ]
   }
  ],
