Remove unused Jupyter notebook and C++ file; add new CSV data file and Python scripts for data processing and testing

--- a/Syntax/Object_oriented.ipynb
+++ b/Syntax/Object_oriented.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "`@staticmethod`\n",
     "\n",
-    "`def static_method(self, args): `\n",
+    "`def static_method(args): `\n",
     "\n",
     "[propety & setter:](#propety-propety--setter-methodsetter)\n",
     "\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "'variable'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,13 +148,13 @@
    "source": [
     "class Myclass:\n",
     "    def __init__(self,var): #constructor\n",
-    "        self.var=var\n",
+    "        self.v=var\n",
     "    def func(self): #class method\n",
-    "        print(self.var)\n",
+    "        print(self.v)\n",
     "\n",
     "object=Myclass('variable') #object creation\n",
     "object.func() #accessing method\n",
-    "object.var #modifying object attribute"
+    "object.v #modifying object attribute"
    ]
   },
   {
@@ -645,7 +645,7 @@
     "def decorator(cls): # decorator function\n",
     "    class Wrapper: # wrapper class\n",
     "        def __init__(self, *args, **kwargs): # constructor\n",
-    "            self.w = cls(*args, **kwargs) # creating object of original class\n",
+    "            self.w = cls(*args, **kwargs) # creating- object of original class\n",
     "        \n",
     "        def display(self): # decorate 'display' method\n",
     "            print(\"before method\")\n",
